# oxeylyzer-2

./: .gitignore  Cargo.toml  README.md  Trunk.toml  analyzer-config.toml  colors.py  default.nix  flake.nix  package-lock.json  package.json  tailwind.config.js
.github/workflows/: gh-pages.yml
benches/: benchmarks.rs  util.rs
core/: Cargo.toml
core/src/: analyze.rs  analyzer_data.rs  cached_layout.rs  char_mapping.rs  corpus_cleaner.rs  data.rs  depth_optimization.rs  layout.rs  lib.rs  stats.rs  trigrams.rs  weights.rs
data/: bokmal.json  bokmal_no_space.json  dutch.json  dutch_no_space.json  english_no_space.json  finnish.json  finnish_no_space.json  french.json  french_no_space.json  german.json  german_no_space.json  italian.json  italian_no_space.json  nynorsk.json  nynorsk_no_space.json  russian.json  russian_no_space.json  shai.json  swedish.json  swedish_no_space.json
layouts/: APT.dof  ARTS.dof  Bone.dof  CTGAP 3.0.dof  Canary.dof  Colemak Qi;x.dof  Colemak.dof  Crouton.dof  Dwarf.dof  Engram.dof  Hands-Up.dof  ISRT.dof  Morgenstern.dof  Murgle.dof  Nerps.dof  Octa8-angle.dof  RSTHD.dof  RTNA.dof  Rollla.dof  Semimak JQC.dof  Semimak.dof  Sonne.dof  TAHAN.dof  Trendei.dof  Vitrimak.dof  Wreathy.dof  XPERT.dof  aest.dof  aptmak.dof  blaze.dof  boo.dof  buggy.dof  bunya.dof  bépo.dof  celeste.dof  colemak-dh.dof  dhorf.dof  dusk.dof  dvardy-kdc.dof  flame.dof  (+38 more)
oxeylyzer-cli/: Cargo.toml
oxeylyzer-cli/src/: config.rs  flags.rs  lib.rs
oxeylyzer-core/: Cargo.toml
oxeylyzer-core/src/: analyze.rs  analyzer_data.rs  cached_layout.rs  char_mapping.rs  corpus_cleaner.rs  data.rs  depth_optimization.rs  layout.rs  lib.rs  optimization.rs  simulated_annealing.rs  stats.rs  weights.rs
oxeylyzer-repl/: Cargo.toml
oxeylyzer-repl/src/: config.rs  flags.rs  lib.rs
repl/: Cargo.toml
repl/src/: config.rs  flags.rs  lib.rs
web/: Cargo.toml  colors.py  heatmap_chars.py  index.html
web-components/: Cargo.toml
web-components/src/: analyze.rs  home.rs  layouts.rs  lib.rs  posts.rs  search.rs  settings.rs
web/css/: keyboard.module.css  main.module.css  posts.module.css
web/css/output/: output.css
web/public/: heatmap_data.json  index.css  site.webmanifest
web/public/favicon/: about.txt
web/public/highlighter/: load_highlight.js
web/public/posts/: !cmini view woopercat.md  analysis.md  how-oxeylyzer-works.md  test-page.md
web/public/weights/: default.json
web/src/: analyze.rs  corpus_data.rs  create_keyboard.rs  dof.rs  keyboard.rs  layouts.rs  main.rs  posts.rs  search.rs  settings.rs  test.rs  tools.rs  util.rs
