[package]
name = "oxeylyzer-core"
version = "0.1.0"
edition = "2021"

[dependencies]
file-chunker = "0.1.1"
fxhash = "0.2.1"
indexmap = { version = "2.2.6", features = ["serde"] }
itertools = { workspace = true }
libdof = { workspace = true }
nanorand = { version = "0.7.0", features = ["getrandom"] }
num_cpus = "1.16.0"
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sliding_window_alt = "0.1.2"
thiserror = { workspace = true }
time_this = "0.2.5"
toml ={ workspace = true }

[target.wasm32-unknown-unknown.dependencies]
gloo-net = "0.5.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
