[package]
name = "oxeylyzer-core"
version = "0.1.0"
edition = "2021"

[dependencies]
file-chunker = "0.1.1"
fxhash = "0.2.1"
indexmap = { version = "2.2.6", features = ["serde"] }
itertools = { workspace = true }
libdof = { workspace = true }
nanorand = "0.7.0"
num_cpus = "1.16.0"
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = "3.8.1"
sliding_window_alt = "0.1.2"
thiserror = { workspace = true }
time_this = "0.2.5"

[dev-dependencies]
assert_approx_eq = "1.1.0"
