[package]
name = "oxeylyzer-repl"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
libdof = { workspace = true }
oxeylyzer-core = { path = "../oxeylyzer-core" }
rayon = { workspace = true }
serde = { workspace = true }
# serde_json = { workspace = true }
shlex = "1.3"
thiserror = { workspace = true }
toml = { workspace = true }
xflags = { git = "https://github.com/O-X-E-Y/xflags/" }
