[package]
name = "web-components"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false }
console_error_panic_hook = "0.1"
futures = { version = "0.3.30", default-features = false }
fxhash = "0.2.1"
gloo-net = { version = "0.6", default-features = false, features = ["http"] }
gray_matter = { version = "0.2.8", default-features = false, features = [
    "yaml",
] }
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos-use = { version = "0.13", default-features = false, features = [
    "use_media_query",
] }
leptos_meta = { version = "0.6.13", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
libdof.workspace = true
oxeylyzer-core.workspace = true
pulldown-cmark = "0.12.0"
rust-embed = { version = "8.4.0", features = [
    "debug-embed",
    "include-exclude",
] }
serde.workspace = true
serde_json.workspace = true
strsim = "0.11"
thiserror.workspace = true
wasm-bindgen-futures = { version = "0.4.43", default-features = false }
web-sys = { version = "0.3.70", default-features = false, features = [
    "Blob",
    "DataTransfer",
    "DataTransferItemList",
    "DragEvent",
    "File",
    "FileList",
] }